--- a/nym-vpn-app/src/i18n/ar/settings.json
+++ b/nym-vpn-app/src/i18n/ar/settings.json
@@ -51,5 +51,5 @@
     "daemon-version": "نسخة الديمن",
     "network-name": "الشبكة"
   },
-  "add-account-button": "أضف بيانات الاعتماد للاتصال"
+  "login-button": "أضف بيانات الاعتماد للاتصال"
 }
