--- a/nym-vpn-app/src/i18n/de/settings.json
+++ b/nym-vpn-app/src/i18n/de/settings.json
@@ -3,7 +3,7 @@
     "title": "Logs",
     "desc": "Kopier oder lösch die Logfiles"
   },
-  "add-account-button": "Zum Verbinden Zugangsdaten hinzufügen",
+  "login-button": "Zum Verbinden Zugangsdaten hinzufügen",
   "credential": {
     "title": "Zugangsdaten"
   },
