--- a/nym-vpn-app/src/i18n/es/add-credential.json
+++ b/nym-vpn-app/src/i18n/es/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Ingresa tu credencial para comenzar",
   "description2": "Canjea tu credencial y, a continuación, pega o escanea el código QR. ¿No tienes una? Regístrate en nymvpn.com para obtenerla al instante.",
   "input-label": "Credencial",
-  "add-button": "Agregar credencial",
+  "login-button": "Agregar credencial",
   "error": "Credencial inválida",
   "added-notification": "¡Credencial añadida correctamente!"
 }
