--- a/nym-vpn-app/src/i18n/es/settings.json
+++ b/nym-vpn-app/src/i18n/es/settings.json
@@ -29,7 +29,7 @@
     "licenses-js": "Licencia (JS)"
   },
   "display-theme": "Tema",
-  "add-account-button": "Agregar credencial para conectar",
+  "login-button": "Agregar credencial para conectar",
   "credential": {
     "title": "Credencial"
   },
