--- a/nym-vpn-app/src/i18n/fa/add-credential.json
+++ b/nym-vpn-app/src/i18n/fa/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "اعتبارنامه خود را برای شروع وارد کنید",
   "description2": "اعتبارنامه خود را فعال کنید، سپس QR Code را اسکن کنید. اعتبارنامه ندارید؟ در nymvpn.com عضو شوید و بلافاصله آن را دریافت کنید.",
   "input-label": "اعتبارنامه",
-  "add-button": "افزودن اعتبارنامه",
+  "login-button": "افزودن اعتبارنامه",
   "error": "اعتبارنامه نامعتبر",
   "added-notification": "اعتبارنامه با موفقیت اضافه شد!"
 }
