--- a/nym-vpn-app/src/i18n/hi/add-credential.json
+++ b/nym-vpn-app/src/i18n/hi/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "शुरू करने के लिए अपने क्रेडेंशियल दर्ज करें",
   "input-label": "क्रेडेंशियल",
   "description2": "नया क्रेडेंशियल उत्पन्न करने के लिए, कृपया अल्फा चरण के निमंत्रण ईमेल में दिए गए लिंक का उपयोग करें।",
-  "add-button": "क्रेडेंशियल जोड़ें",
+  "login-button": "क्रेडेंशियल जोड़ें",
   "error": "अमान्य क्रेडेंशियल",
   "added-notification": "क्रेडेंशियल सफलतापूर्वक दर्ज हो गया है!"
 }
