--- a/nym-vpn-app/src/i18n/it/add-credential.json
+++ b/nym-vpn-app/src/i18n/it/add-credential.json
@@ -1,6 +1,6 @@
 {
   "input-label": "Credenziali",
-  "add-button": "Aggiungi credenziali",
+  "login-button": "Aggiungi credenziali",
   "error": "Credenziali invalide",
   "welcome": "Benvenuto/a!",
   "description1": "Inserisci le credenziali per iniziare",
