--- a/nym-vpn-app/src/i18n/ja/add-credential.json
+++ b/nym-vpn-app/src/i18n/ja/add-credential.json
@@ -1,6 +1,6 @@
 {
   "input-label": "認証情報",
-  "add-button": "認証情報を追加",
+  "login-button": "認証情報を追加",
   "error": "無効な認証情報",
   "added-notification": "認証情報が追加されました！",
   "welcome": "ようこそ！",
