--- a/nym-vpn-app/src/i18n/pt-BR/add-credential.json
+++ b/nym-vpn-app/src/i18n/pt-BR/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Digite sua credencial para começar",
   "description2": "Resgate sua credencial e cole ou escaneie o código QR. Não tem uma? Registre-se em nymvpn.com para obtê-la instantaneamente.",
   "input-label": "Credencial",
-  "add-button": "Adicionar credencial",
+  "login-button": "Adicionar credencial",
   "error": "Credencial inválida",
   "added-notification": "Credencial adicionada com sucesso!"
 }
