--- a/nym-vpn-app/src/i18n/pt-BR/settings.json
+++ b/nym-vpn-app/src/i18n/pt-BR/settings.json
@@ -32,7 +32,7 @@
     "emptyData": "Não há dados de licença disponíveis"
   },
   "display-theme": "Modo de visualização",
-  "add-account-button": "adicionar credencial para conectar",
+  "login-button": "adicionar credencial para conectar",
   "entry-selector": {
     "title": "Seletor de local de entrada",
     "desc": "Selecione manualmente seu salto de entrada"
