--- a/nym-vpn-app/src/i18n/ru/add-credential.json
+++ b/nym-vpn-app/src/i18n/ru/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Чтобы начать введите ваши учётные данные",
   "description2": "Воспользуйтесь своими учётными данными, затем вставьте или отсканируйте QR-код. У вас их нет? Зарегистрируйтесь на сайте nymvpn.com и сразу получите их.",
   "input-label": "Учётные данные",
-  "add-button": "Добавить учётные данные",
+  "login-button": "Добавить учётные данные",
   "error": "Неверные учётные данные",
   "added-notification": "Учётные данные успешно добавлены!"
 }
