--- a/nym-vpn-app/src/i18n/tr/add-credential.json
+++ b/nym-vpn-app/src/i18n/tr/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Başlamak için giriş anahtarınızı girin",
   "description2": "Giriş anahtarınızı kullanarak giriş yapın, ardından QR kodunu yapıştırın veya tarayın. Henüz giriş bilginiz yok mu? Anında almak için nymvpn.com adresinden kaydolun.",
   "input-label": "Giriş anahtarı",
-  "add-button": "Giriş anahtarını ekle",
+  "login-button": "Giriş anahtarını ekle",
   "error": "Geçersiz giriş anahtarı",
   "added-notification": "Giriş anahtarı başarıyla eklendi!"
 }
