--- a/nym-vpn-app/src/i18n/de/add-credential.json
+++ b/nym-vpn-app/src/i18n/de/add-credential.json
@@ -4,6 +4,6 @@
   "description1": "Zum Starten Zugangsdaten eingeben",
   "description2": "Ruf deine Zugangsdaten ab und kopiere oder scanne den QR-Code. Melde dich auf nyymvon.com an um sofort einen Code zu erhalten.",
   "input-label": "Zugangsdaten",
-  "add-button": "Zugangsdaten hinzufügen",
+  "login-button": "Zugangsdaten hinzufügen",
   "added-notification": "Zugangsdaten erfolgreich hinzugefügt!"
 }
