--- a/nym-vpn-app/src/i18n/fr/add-credential.json
+++ b/nym-vpn-app/src/i18n/fr/add-credential.json
@@ -4,6 +4,6 @@
   "description1": "Saisissez votre identifiant pour démarrer",
   "description2": "Pour générer un identifiant, merci d'utiliser le lien fourni dans l'email d'invitation à la phase de tests.",
   "input-label": "Identifiant",
-  "add-button": "Ajouter un identifiant",
+  "login-button": "Ajouter un identifiant",
   "error": "Identifiant invalide"
 }
