--- a/nym-vpn-app/src/i18n/pt-PT/add-credential.json
+++ b/nym-vpn-app/src/i18n/pt-PT/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Introduza a sua credencial para começar",
   "description2": "Resgate a sua credencial e, em seguida, cole ou digitalize o código QR. Não tem um? Registe-se em nymvpn.com para a obter instantaneamente.",
   "input-label": "Credencial",
-  "add-button": "Adicione credencial",
+  "login-button": "Adicione credencial",
   "error": "Credencial Inválida",
   "added-notification": "Credencial adicionada com sucesso!"
 }
