--- a/nym-vpn-app/src/i18n/ru/settings.json
+++ b/nym-vpn-app/src/i18n/ru/settings.json
@@ -25,7 +25,7 @@
     "emptyData": "Лицензионные данные отсутствуют"
   },
   "display-theme": "Режим отображения",
-  "add-account-button": "Добавить учётные данные для подключения",
+  "login-button": "Добавить учётные данные для подключения",
   "error-monitoring": {
     "title": "Анонимные отчёты об ошибке",
     "desc": "активируется при перезапуске приложения"
