--- a/nym-vpn-app/src/i18n/uk/add-credential.json
+++ b/nym-vpn-app/src/i18n/uk/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "Введіть свої облікові дані, щоб почати",
   "description2": "Щоб згенерувати нові облікові дані, скористайтеся посиланням, наданим в електронному запрошенні на альфа-тест.",
   "input-label": "Облікові дані",
-  "add-button": "Додати облікові дані",
+  "login-button": "Додати облікові дані",
   "error": "Невірні облікові дані",
   "added-notification": "Облікові дані додано успішно!"
 }
