--- a/nym-vpn-app/src/i18n/zh-Hans/add-credential.json
+++ b/nym-vpn-app/src/i18n/zh-Hans/add-credential.json
@@ -3,7 +3,7 @@
   "description1": "输入您的凭证以开始",
   "description2": "兑换凭证，然后粘贴或扫描二维码。 没有二维码？ 在 nymvpn.com 注册，立即获得。",
   "input-label": "凭证",
-  "add-button": "添加凭证",
+  "login-button": "添加凭证",
   "error": "无效凭证",
   "added-notification": "凭证添加成功！"
 }
