feat(tauri): account (#1290)

--- a/nym-vpn-app/src/i18n/en/add-credential.json
+++ b/nym-vpn-app/src/i18n/en/add-credential.json
@@ -1,9 +1,14 @@
 {
-  "welcome": "Welcome!",
-  "description1": "Enter your credential to get started",
-  "description2": "Redeem your credential, then paste or scan the QR code. Don't have one? Sign up at nymvpn.com to get it instantly.",
-  "input-label": "Credential",
-  "add-button": "Add credential",
-  "error": "Invalid credential",
-  "added-notification": "Credential added successfully!"
+  "welcome": "Welcome to NymVPN!",
+  "description1": "Enter the 24 words of your NymVPN recovery phrase to log in to your account",
+  "description2": "You can only use the recovery phrase created in NymVPN, not the Nym Wallet.",
+  "input-label": "Recovery phrase",
+  "input-placeholder": "e.g. smoke artefact velvet skull pop palace tortoise damage rough…",
+  "login-button": "Log in",
+  "error": "Invalid recovery phrase",
+  "create-account": {
+    "text": "New to NymVPN?",
+    "link": "Create an account"
+  },
+  "added-notification": "Device successfully added to your account"
 }
