--- a/nym-vpn-app/src/i18n/fa/settings.json
+++ b/nym-vpn-app/src/i18n/fa/settings.json
@@ -27,7 +27,7 @@
     "title": "گزارش‌ها",
     "desc": "گزارش‌ها را کپی یا پاک کنید"
   },
-  "add-credential-button": "افزودن اعتبارنامه برای اتصال",
+  "login-button": "افزودن اعتبارنامه برای اتصال",
   "entry-selector": {
     "title": "گزینش‌گر موقعیت ورودی",
     "desc": "به صورت دستی پرش ورودی خود را انتخاب کنید"
