--- a/nym-vpn-app/src/i18n/hi/settings.json
+++ b/nym-vpn-app/src/i18n/hi/settings.json
@@ -31,7 +31,7 @@
     "faq": "अक्सर पूछे जाने वाले प्रश्न (FAQ) देखें",
     "contact": "मदद के लिए संपर्क करें"
   },
-  "add-credential-button": "कनेक्ट करने के लिए क्रेडेंशियल जोड़ें",
+  "login-button": "कनेक्ट करने के लिए क्रेडेंशियल जोड़ें",
   "logs": {
     "title": "लॉग्स",
     "desc": "लॉग्स कॉपी करें या मिटाएं"
