add network env selector

--- a/nym-vpn-app/src/i18n/en/errors.json
+++ b/nym-vpn-app/src/i18n/en/errors.json
@@ -3,7 +3,8 @@
   "internal": "Internal error",
   "daemon": {
     "not-connected": "Not connected to the daemon",
-    "internal": "Daemon internal error"
+    "internal": "Daemon internal error",
+    "invalid-network": "Invalid network"
   },
   "grpc": "Internal gRPC error",
   "connection": {
