--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
     <string name="app_name">NymVPN</string>
 	<string name="provider" translatable="false">net.nymtech.nymvpn.provider</string>
-    <string name="settings">Settings</string>
+	<string name="create_account_link_qa" translatable="false">https://nym-dot-com-git-deploy-canary-nyx-network-staging.vercel.app/en/prototype/account/signup</string>
+	<string name="settings">Settings</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
     <string name="disconnecting">Disconnecting</string>
@@ -187,6 +188,7 @@
 	<string name="create_account">Create an account</string>
 	<string name="account">Account</string>
 	<string name="account_url" translatable="false">https://nymvpn.com/account/login</string>
+	<string name="account_url_qa" translatable="false">https://nym-dot-com-git-deploy-canary-nyx-network-staging.vercel.app/en/prototype/account/signin</string>
 	<string name="mnemonic_example">e.g. smoke artefact velvet skull pop palace tortoise damage rough...</string>
 	<string name="recovery_phrase_message">Enter your 24-word secret recovery phrase below to log in to your account</string>
 	<string name="recovery_phrase_disclaimer">You can only use the recovery phrase created in NymVPN, not the Nym Wallet.</string>
