chore: weblate tauri (#1392)
Co-authored-by: Anonymous <noreply@weblate.org>
Co-authored-by: Merve <merve@nymtech.net>
Co-authored-by: vvmmaann <ekononov30@yandex.ru>
Co-authored-by: Rocio Gonzalez Toral <chio.gonzalezt@gmail.com>
Co-authored-by: Daniel <daniel@alabs.org>

--- a/nym-vpn-app/src/i18n/es/add-credential.json
+++ b/nym-vpn-app/src/i18n/es/add-credential.json
@@ -1,9 +1,14 @@
 {
-  "welcome": "¡Bienvenido!",
-  "description1": "Ingresa tu credencial para comenzar",
-  "description2": "Canjea tu credencial y, a continuación, pega o escanea el código QR. ¿No tienes una? Regístrate en nymvpn.com para obtenerla al instante.",
-  "input-label": "Credencial",
-  "login-button": "Agregar credencial",
-  "error": "Credencial inválida",
-  "added-notification": "¡Credencial añadida correctamente!"
+  "welcome": "¡Bienvenido a la NymVPN!",
+  "description1": "Introduce las 24 palabras de tu frase de recuperación de la NymVPN para acceder a tu cuenta",
+  "description2": "Sólo puedes utilizar tu frase de recuperación creada en la NymVPN, no en la Nym Wallet.",
+  "input-label": "Frase de recuperación",
+  "login-button": "Iniciar sesión",
+  "error": "Frase de recuperación inválida",
+  "added-notification": "Dispositivo añadido correctamente a tu cuenta",
+  "create-account": {
+    "text": "¿Nuevo en NymVPN?",
+    "link": "Crear cuenta"
+  },
+  "input-placeholder": "por ejemplo, humo artefacto terciopelo cráneo pop palacio tortuga daño áspero…"
 }
