APPLE: expose errors from tunnel (#1412)
(cherry picked from commit 19f98d28c4cd75e5c5a24147814990e7691b616b)

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -474,6 +474,105 @@
         }
       }
     },
+    "errorReason.dns" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to configure DNS"
+          }
+        }
+      }
+    },
+    "errorReason.establishMixnetConnection" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to establish mixnet connection"
+          }
+        }
+      }
+    },
+    "errorReason.establishWireguardConnection" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to establish wireguard connection"
+          }
+        }
+      }
+    },
+    "errorReason.firewall" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to configure firewall"
+          }
+        }
+      }
+    },
+    "errorReason.internalUnknown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Internal unknown tunnel failure"
+          }
+        }
+      }
+    },
+    "errorReason.routing" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to configure routing"
+          }
+        }
+      }
+    },
+    "errorReason.tunDevice" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to configure tunnel device"
+          }
+        }
+      }
+    },
+    "errorReason.tunnelDown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tunnel failed at runtime"
+          }
+        }
+      }
+    },
+    "errorReason.tunnelProvider" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Failed to configure packet tunnel provider"
+          }
+        }
+      }
+    },
     "establishingConnection" : {
       "extractionState" : "manual",
       "localizations" : {
