--- a/nym-vpn-android/app/src/main/res/values/strings.xml
+++ b/nym-vpn-android/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
 	<string name="check_faq">Check the FAQ</string>
 	<string name="join_matrix">Join us on Matrix</string>
 	<string name="join_discord">Join us on Discord</string>
+	<string name="create_account_url" translatable="false">https://nymvpn.com/account/create</string>
 	<string name="matrix_url" translatable="false">https://matrix.to/#/%23NymVPN:nymtech.chat</string>
 	<string name="discord_url" translatable="false">http://nymtech.net/go/discord</string>
 	<string name="faq_url" translatable="false">https://support.nymvpn.com</string>
