Fix credential naming to mnemonic

--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -243,13 +243,13 @@
         }
       }
     },
-    "addCredtenials.credential" : {
+    "addCredtenials.mnemonic" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Credential"
+            "value" : "Mnemonic"
           }
         }
       }
