fix some i18n fr copy & small style update

--- a/nym-vpn-app/src/i18n/fr/common.json
+++ b/nym-vpn-app/src/i18n/fr/common.json
@@ -14,8 +14,8 @@
   "privacy-statement": "Déclaration de confidentialité",
   "display-theme": "Affichage",
   "ui-mode": {
-    "dark": "Apparence sombre",
-    "light": "Apparence claire"
+    "dark": "Thème sombre",
+    "light": "Thème claire"
   },
   "vpn-modes": {
     "privacy": "Anonyme",
