--- a/nym-vpn-app/src/i18n/fr/settings.json
+++ b/nym-vpn-app/src/i18n/fr/settings.json
@@ -10,14 +10,13 @@
   "feedback": {
     "title": "Retour d'information",
     "github": "Créer un ticket GitHub",
-    "send": "Envoyez-nous un retour d'information",
+    "get-in-touch": "Contactez-nous",
     "matrix": "Rejoignez-nous sur Matrix",
     "discord": "Rejoignez-nous sur Discord"
   },
   "support": {
     "title": "Support",
-    "faq": "Consulter la FAQ",
-    "contact": "Contacter le Support"
+    "faq": "Consulter la FAQ"
   },
   "legal": {
     "title": "Juridique",
@@ -28,7 +27,7 @@
     "licenses-rust": "Licences (Rust)",
     "licenses-js": "Licences (JavaScript)"
   },
-  "display-theme": "Apparence",
+  "display-theme": "Affichage",
   "login-button": "S'identifier",
   "monitoring-alert": "Redémarrez l'application pour que le changement s'applique.",
   "faq": "F.A.Q.",
