--- a/nym-vpn-app/src/i18n/fr/display.json
+++ b/nym-vpn-app/src/i18n/fr/display.json
@@ -1,10 +1,10 @@
 {
   "options": {
     "system": "Automatique",
-    "light": "Apparence claire",
-    "dark": "Apparence sombre"
+    "light": "Claire",
+    "dark": "Sombre"
   },
   "system-desc": "Utiliser le thème de l'appareil",
-  "theme-section-title": "Apparence",
+  "theme-section-title": "Thème",
   "zoom-section-title": "Niveau de zoom"
 }
