--- a/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
+++ b/nym-vpn-apple/Theme/Sources/Theme/Resources/Localizable.xcstrings
@@ -243,13 +243,13 @@
         }
       }
     },
-    "addCredtenials.credential" : {
+    "addCredtenials.mnemonic" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Credential"
+            "value" : "Mnemonic"
           }
         }
       }
@@ -639,6 +639,17 @@
         }
       }
     },
+    "errorReason.unknown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Unknown reason. Please try again."
+          }
+        }
+      }
+    },
     "establishingConnection" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -778,6 +789,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Something went wrong: Cannot load pre-bundled countries"
+          }
+        }
+      }
+    },
+    "generalNymError.somethingWentWrong" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Something went wrong. Please try again."
           }
         }
       }
